--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "@tiptap/starter-kit": "^2.9.1",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^7.1.0",
+    "envalid": "^8.0.0",
     "iron-session": "^8.0.4",
+    "lodash": "^4.17.21",
+    "mongoose": "^8.8.2",
     "next": "15.0.3",
     "next-ws": "^1.1.1",
     "react": "19.0.0-rc-66855b96-20241106",
@@ -41,6 +44,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
