--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.693.0",
     "@aws-sdk/s3-request-presigner": "^3.693.0",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@mantine/carousel": "^7.14.1",
     "@mantine/charts": "^7.14.1",
     "@mantine/core": "^7.14.1",
@@ -21,6 +23,8 @@
     "@mantine/modals": "^7.14.1",
     "@mantine/notifications": "^7.14.1",
     "@mantine/tiptap": "^7.14.1",
+    "@mui/icons-material": "^6.1.8",
+    "@mui/material": "^6.1.8",
     "@reduxjs/toolkit": "^2.3.0",
     "@tiptap/extension-link": "^2.9.1",
     "@tiptap/pm": "^2.9.1",
