--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@mantine/tiptap": "^7.14.1",
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
+    "@mui/x-data-grid-premium": "^7.23.0",
+    "@mui/x-license": "^7.23.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@tiptap/extension-link": "^2.9.1",
     "@tiptap/pm": "^2.9.1",
@@ -43,6 +45,7 @@
     "react-redux": "^9.1.2",
     "recharts": "2",
     "redux-persist": "^6.0.0",
+    "snowflakify": "^1.0.5",
     "swr": "^2.2.5",
     "ws": "^8.18.0",
     "zod": "^3.23.8"
