--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "iron-session": "^8.0.4",
     "lodash": "^4.17.21",
     "mongoose": "^8.8.2",
+    "mui-file-dropzone": "^4.0.2",
     "next": "15.0.3",
     "next-ws": "^1.1.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dropzone": "^14.3.5",
     "react-redux": "^9.1.2",
     "recharts": "2",
     "redux-persist": "^6.0.0",
