--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "recharts": "2",
     "redux-persist": "^6.0.0",
     "snowflakify": "^1.0.5",
+    "socket.io": "^4.8.1",
     "swr": "^2.2.5",
     "ws": "^8.18.0",
     "zod": "^3.23.8"
@@ -58,6 +59,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.5.13",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
