--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-dropzone": "^14.3.5",
     "react-redux": "^9.1.2",
+    "react-toastify": "^11.0.2",
     "recharts": "2",
     "redux-persist": "^6.0.0",
     "snowflakify": "^1.0.5",
     "socket.io": "^4.8.1",
     "swr": "^2.2.5",
+    "usehooks-ts": "^3.1.0",
     "ws": "^8.18.0",
     "zod": "^3.23.8"
   },
