--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.693.0",
     "@aws-sdk/s3-request-presigner": "^3.693.0",
-    "@emailjs/browser": "^4.4.1",
+    "@emailjs/nodejs": "^5.0.2",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mantine/carousel": "^7.14.1",
@@ -25,6 +25,7 @@
     "@mantine/notifications": "^7.14.1",
     "@mantine/tiptap": "^7.14.1",
     "@mui/icons-material": "^6.1.8",
+    "@mui/lab": "6.0.0-beta.22",
     "@mui/material": "^6.1.8",
     "@mui/x-data-grid-premium": "^7.23.0",
     "@mui/x-license": "^7.23.0",
