--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-toastify": "^11.0.2",
     "recharts": "2",
     "redux-persist": "^6.0.0",
+    "rxjs": "^7.8.1",
     "snowflakify": "^1.0.5",
     "swr": "^2.2.5",
     "usehooks-ts": "^3.1.0",
