--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@mui/x-data-grid-premium": "^7.23.0",
     "@mui/x-license": "^7.23.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "@statelyai/inspect": "^0.4.0",
     "@tiptap/extension-link": "^2.9.1",
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
+    "@xstate/react": "^5.0.2",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.5.2",
     "envalid": "^8.0.0",
@@ -57,6 +59,7 @@
     "swr": "^2.2.5",
     "usehooks-ts": "^3.1.0",
     "ws": "^8.18.0",
+    "xstate": "^5.19.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
