added video call baseline

--- a/package.json
+++ b/package.json
@@ -22,15 +22,20 @@
     "@mui/material": "^6.1.8",
     "@mui/x-data-grid-premium": "^7.23.0",
     "@mui/x-license": "^7.23.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@statelyai/inspect": "^0.4.0",
     "@xstate/react": "^5.0.2",
     "@zoom/videosdk": "^2.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "envalid": "^8.0.0",
     "event-source-plus": "^0.1.8",
     "iron-session": "^8.0.4",
+    "jsrsasign": "^11.1.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.471.1",
     "mongodb": "6.12",
     "mongoose": "^8.8.2",
     "next": "15.1.4",
@@ -43,11 +48,13 @@
     "rxjs": "^7.8.1",
     "snowflakify": "^1.0.5",
     "swr": "^2.2.5",
+    "tailwind-merge": "^2.6.0",
     "usehooks-ts": "^3.1.0",
     "xstate": "^5.19.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/jsrsasign": "^10.5.15",
     "@types/lodash": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20",
