--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dayjs": "^1.11.13",
     "envalid": "^8.0.0",
     "event-source-plus": "^0.1.8",
+    "google-auth-library": "^9.15.0",
     "iron-session": "^8.0.4",
     "jsrsasign": "^11.1.0",
     "lodash": "^4.17.21",
@@ -39,6 +40,7 @@
     "mongodb": "6.12",
     "mongoose": "^8.8.2",
     "next": "15.1.4",
+    "next-auth": "^4.24.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-redux": "^9.2.0",
@@ -47,6 +49,7 @@
     "redux-persist": "^6.0.0",
     "rxjs": "^7.8.1",
     "snowflakify": "^1.0.5",
+    "swiper": "^11.2.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.6.0",
     "usehooks-ts": "^3.1.0",
