--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^6.1.8",
     "@mui/x-data-grid-premium": "^7.23.0",
     "@mui/x-license": "^7.23.0",
+    "@next/font": "^14.2.15",
     "@radix-ui/react-slot": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@statelyai/inspect": "^0.4.0",
