--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@statelyai/inspect": "^0.4.0",
+    "@xstate-ninja/react": "^1.1.3",
     "@xstate/react": "^5.0.2",
     "@zoom/videosdk": "^2.1.0",
     "class-variance-authority": "^0.7.1",
@@ -33,6 +34,9 @@
     "dayjs": "^1.11.13",
     "envalid": "^8.0.0",
     "event-source-plus": "^0.1.8",
+    "formik": "^2.4.6",
+    "formik-validator-zod": "^2.0.1",
+    "generate-password": "^1.7.1",
     "google-auth-library": "^9.15.0",
     "iron-session": "^8.0.4",
     "jsrsasign": "^11.1.0",
