--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@statelyai/inspect": "^0.4.0",
-    "@xstate-ninja/react": "^1.1.3",
     "@xstate/react": "^5.0.2",
     "@zoom/videosdk": "^2.1.0",
     "class-variance-authority": "^0.7.1",
@@ -53,11 +52,11 @@
     "recharts": "2",
     "redux-persist": "^6.0.0",
     "rxjs": "^7.8.1",
-    "snowflakify": "^1.0.5",
     "swiper": "^11.2.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.6.0",
     "usehooks-ts": "^3.1.0",
+    "uuid": "^11.0.5",
     "xstate": "^5.19.2",
     "zod": "^3.23.8"
   },
