--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@statelyai/inspect": "^0.4.0",
+    "@tiptap/pm": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "@xstate/react": "^5.0.2",
     "@zoom/videosdk": "^2.1.0",
     "class-variance-authority": "^0.7.1",
