--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "^6.1.8",
     "@mui/lab": "6.0.0-beta.22",
     "@mui/material": "^6.1.8",
+    "@mui/styles": "^6.4.4",
     "@mui/x-data-grid-premium": "^7.23.0",
     "@mui/x-license": "^7.23.0",
     "@next/font": "^14.2.15",
